fix horizontal overflow and card sizes

--- a/client/src/sass/_client-display-class.scss
+++ b/client/src/sass/_client-display-class.scss
@@ -1,4 +1,6 @@
 .ClientDisplayClasses {
+  max-width: 100%;
+
   h3 {
     font-size: 1.6rem;
     //  text-align: center;
